# Text_mining

./: .gitignore  README.md  bash.exe.stackdump  data_preprocessing.py  dataset_loader.py  emotion_classification_pipeline.py  paper.bib
sentiment_analysis/: .env.example  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
sentiment_analysis/absa/: PROJECT_PLAN.md  README.md  main.py  pyproject.toml
sentiment_analysis/config/: default.yaml
sentiment_analysis/config/aspects/: smartphone.yaml
sentiment_analysis/data/processed/samsung-galaxy-s25/: sentences.json
sentiment_analysis/data/processed/vivo-x300-pro/: sentences.json
sentiment_analysis/data/raw/samsung-galaxy-s25/: gadgets.json  technology.json
sentiment_analysis/data/raw/samsung-galaxy-s25-ultra/: Android.json  GalaxyS23Ultra.json  GalaxyS24Ultra.json  GalaxyS25.json  GalaxyS25Ultra.json  S24Ultra.json  S25Ultra.json  SamsungGalaxyS26U.json  gadgets.json  samsung.json  samsunggalaxy.json  technology.json
sentiment_analysis/data/raw/samsung-s25-ultra/: Android.json  GalaxyS23Ultra.json  GalaxyS25.json  GalaxyS25Ultra.json  S25Ultra.json  Smartphones.json  gadgets.json  samsung.json  samsunggalaxy.json  technology.json
sentiment_analysis/data/raw/vivo-x-300-pro/: vivo.json
sentiment_analysis/data/raw/vivo-x300-pro/: Android.json  Oppo.json  VivoX100Pro.json  gadgets.json  mobilephotography.json  vivo.json  vivox200pro.json  vivox300.json
sentiment_analysis/data/results/samsung-galaxy-s25-ultra/: final_report.json
sentiment_analysis/src/absa/: __init__.py  cli.py  pipeline.py
(+115 files in other folders)
